# Apos

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  aposLog.txt  deleteme.ui  push.bat
classes/backendClasses/: Logger.cpp  Logger.hpp  objecthandler.cpp  objecthandler.hpp  startuphandler.cpp  startuphandler.hpp
classes/databaseClasses/: databasehandler.cpp  databasehandler.hpp  tablehandler.cpp  tablehandler.hpp
classes/frontendClasses/: devwindow.cpp  devwindow.hpp  devwindow.ui  launcherwindow.cpp  launcherwindow.hpp  launcherwindow.ui  settingswindow.cpp  settingswindow.hpp  settingswindow.ui  translatablewindow.cpp  translatablewindow.hpp  windowhandler.cpp  windowhandler.hpp
classes/uiFiles/: devwindow.ui
docs/: annotated.html  annotated_dup.js  classes.html  dir_000000_000002.html  dir_000003_000000.html  dir_000004_000001.html  dir_8c45a868dc376de484afc92959770793.html  dir_8c45a868dc376de484afc92959770793.js  dir_8c45a868dc376de484afc92959770793_dep.map  dir_9298123355dd038e9f4613f865552c14.html  dir_9298123355dd038e9f4613f865552c14.js  dir_9298123355dd038e9f4613f865552c14_dep.map  dir_b02e4219757ae4e3a0f1714873865bbf.html  dir_b02e4219757ae4e3a0f1714873865bbf.js  dir_b02e4219757ae4e3a0f1714873865bbf_dep.map  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.js  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b_dep.map  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b_dep.md5  dir_c83faaac96b2ce7db05bf53f9c557b12.html  dir_c83faaac96b2ce7db05bf53f9c557b12.js  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  (+15 more)
docs/d0/d03/: class_apos_backend_1_1_startup_handler-members.html
docs/d0/d1d/: windowhandler_8cpp.html  windowhandler_8cpp_source.html
docs/d0/d33/: translatablewindow_8hpp__dep__incl.map  translatablewindow_8hpp__dep__incl.md5
docs/d0/d45/: translatablewindow_8cpp.html  translatablewindow_8cpp_source.html
docs/d0/da2/: startuphandler_8hpp__incl.map  startuphandler_8hpp__incl.md5
docs/d0/dc4/: class_apos_frontend_1_1_dev_window-members.html
docs/d0/dc5/: group___variables.html  group___variables.js
docs/d1/d31/: databasehandler_8cpp__incl.map  databasehandler_8cpp__incl.md5
docs/d1/d33/: tablehandler_8hpp__dep__incl.map  tablehandler_8hpp__dep__incl.md5
docs/d1/d58/: objecthandler_8cpp.html  objecthandler_8cpp_source.html
docs/d1/d83/: class_window_handler__inherit__graph.map
docs/d1/d87/: devwindow_8cpp.html  devwindow_8cpp_source.html
docs/d1/d97/: class_apos_frontend_1_1_settings_window-members.html
docs/d1/da8/: settingswindow_8hpp__dep__incl.map  settingswindow_8hpp__dep__incl.md5
docs/d1/dbf/: class_apos_backend_1_1_object_handler.html  class_apos_backend_1_1_object_handler.js
docs/d1/ddc/: class_apos_backend_1_1_startup_handler.html  class_apos_backend_1_1_startup_handler.js
docs/d2/d3e/: launcherwindow_8hpp.html  launcherwindow_8hpp_source.html
docs/d2/d76/: windowhandler_8cpp__incl.map  windowhandler_8cpp__incl.md5
docs/d2/da7/: _c_o_n_t_r_i_b_u_t_i_n_g_8md.html
docs/d2/daa/: class_settings_window__inherit__graph.map  class_settings_window__inherit__graph.md5
docs/d2/df6/: class_apos_frontend_1_1_settings_window.html  class_apos_frontend_1_1_settings_window.js  class_apos_frontend_1_1_settings_window_a501fb0a911cfa4a4b24a2c58ed59428f_cgraph.map  class_apos_frontend_1_1_settings_window_a501fb0a911cfa4a4b24a2c58ed59428f_cgraph.md5  class_apos_frontend_1_1_settings_window_a501fb0a911cfa4a4b24a2c58ed59428f_icgraph.map  class_apos_frontend_1_1_settings_window_a501fb0a911cfa4a4b24a2c58ed59428f_icgraph.md5  class_apos_frontend_1_1_settings_window_aa6da7c10b8630bef5645e16d93989327_cgraph.map  class_apos_frontend_1_1_settings_window_aa6da7c10b8630bef5645e16d93989327_cgraph.md5  class_apos_frontend_1_1_settings_window_aa6da7c10b8630bef5645e16d93989327_icgraph.map  class_apos_frontend_1_1_settings_window_aa6da7c10b8630bef5645e16d93989327_icgraph.md5
docs/d3/d08/: class_apos_frontend_1_1_window_handler-members.html
docs/d3/d25/: class_apos_frontend_1_1_translatable_window-members.html
docs/d3/d2e/: class_window_handler__coll__graph.map
docs/d3/d34/: class_apos_database_1_1_table_handler.html  class_apos_database_1_1_table_handler.js
docs/d3/d89/: startuphandler_8hpp.html  startuphandler_8hpp.js  startuphandler_8hpp_source.html
docs/d3/d90/: class_apos_frontend_1_1_window_handler.html  class_apos_frontend_1_1_window_handler.js
docs/d3/dbc/: group___constructructors-_destructors.html  group___constructructors-_destructors.js  group___constructructors-_destructors_ga4d0c5f6c403b96a7ce7f2c31dc7864eb_cgraph.map  group___constructructors-_destructors_ga4d0c5f6c403b96a7ce7f2c31dc7864eb_cgraph.md5  group___constructructors-_destructors_ga5800462baf6f3c3834f506ad8575d4ad_cgraph.map  group___constructructors-_destructors_ga5800462baf6f3c3834f506ad8575d4ad_cgraph.md5  (+4 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_2.js  files_4.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  (+31 more)
resources/: qResources.qrc
resources/colors/: AposColorPalette.xml  ArosColorPalette.xml  colors.txt
resources/defaultDatabase/: userDatabase.db
resources/documentation/: Doxyfile  header.html
resources/installer/: installerApos.iss
resources/other/: Todo-Versions.txt  innoInstallerScript.iss  sqliteCommands.txt
resources/translations/: Apos-DatabaseManager_de_DE.ts  Apos-DatabaseManager_en_GB.ts
source/: main.cpp
(+411 files in other folders)
